--- a/css/styles.css
+++ b/css/styles.css
@@ -156,7 +156,8 @@ dfn {
  * Known issue: no IE 6/7 normalization.
  */
 hr {
-  box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
   height: 0; }
 
 /**
@@ -390,7 +391,8 @@ html input[disabled] {
  */
 input[type="checkbox"],
 input[type="radio"] {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   /* 1 */
   padding: 0;
   /* 2 */
@@ -407,6 +409,7 @@ input[type="radio"] {
 input[type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
+  -webkit-box-sizing: content-box;
   /* 2 */
   box-sizing: content-box; }
 
@@ -551,8 +554,23 @@ body {
   color: #ffffff; }
 
 h1, h2 {
-  font-family: arial, helvetica, sans-serif;
-  color: #08e35a; }
+  margin: 0;
+  font-family: "Exo", sans-serif;
+  font-weight: 900;
+  color: #ffffff;
+  text-transform: uppercase; }
+
+h2 {
+  font-size: 48px; }
+  h2 .large {
+    display: block;
+    font-size: 68px; }
+  h2 .medium {
+    display: block;
+    font-size: 63px; }
+  h2 .small {
+    display: block;
+    font-size: 32px; }
 
 a {
   color: #09c9f2;
@@ -562,6 +580,12 @@ a {
 
 ul {
   background-color: transparent; }
+
+.fade-off {
+  opacity: 0 !important; }
+
+.fade-on {
+  opacity: 1 !important; }
 
 #main-navigation {
   position: fixed;
@@ -579,7 +603,9 @@ ul {
       font-size: 18px;
       color: #ffffff;
       text-transform: uppercase;
-      text-shadow: 2px 2px 1px #646464; }
+      text-shadow: 1px 1px 3px rgba(23, 23, 23, 0.89); }
+      #main-navigation li a:hover {
+        color: #09c9f2; }
 
 #hero {
   position: relative;
@@ -587,8 +613,135 @@ ul {
   height: 100vh;
   background: url(../images/fpo-hero-bg.jpg) no-repeat;
   background-size: cover;
+  background-position: center;
   background-attachment: fixed;
   z-index: 50; }
+  #hero h2 {
+    position: relative;
+    top: 50%;
+    line-height: 70px;
+    text-align: center;
+    text-shadow: 1px 1px 3px rgba(23, 23, 23, 0.89);
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+    -webkit-transition: opacity 1s ease-out;
+    transition: opacity 1s ease-out; }
+    #hero h2 .large {
+      opacity: 0;
+      -webkit-transform: rotateZ(-12deg);
+              transform: rotateZ(-12deg);
+      -webkit-transform-origin: left;
+              transform-origin: left;
+      -webkit-animation-name: LargeIn;
+              animation-name: LargeIn;
+      -webkit-animation-duration: 1.5s;
+              animation-duration: 1.5s;
+      -webkit-animation-play-state: running;
+              animation-play-state: running;
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+      -webkit-animation-iteration-count: 1;
+              animation-iteration-count: 1;
+      -webkit-animation-fill-mode: forwards;
+              animation-fill-mode: forwards; }
+    #hero h2 .medium {
+      opacity: 0;
+      -webkit-transform: rotateZ(12deg);
+              transform: rotateZ(12deg);
+      -webkit-transform-origin: right;
+              transform-origin: right;
+      -webkit-animation-name: MediumIn;
+              animation-name: MediumIn;
+      -webkit-animation-delay: .5s;
+              animation-delay: .5s;
+      -webkit-animation-duration: 1.5s;
+              animation-duration: 1.5s;
+      -webkit-animation-play-state: running;
+              animation-play-state: running;
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+      -webkit-animation-iteration-count: 1;
+              animation-iteration-count: 1;
+      -webkit-animation-fill-mode: forwards;
+              animation-fill-mode: forwards; }
+    #hero h2 .small {
+      opacity: 0;
+      -webkit-transform: translateY(50px);
+              transform: translateY(50px);
+      -webkit-animation-name: SmallIn;
+              animation-name: SmallIn;
+      -webkit-animation-delay: 1s;
+              animation-delay: 1s;
+      -webkit-animation-duration: 1s;
+              animation-duration: 1s;
+      -webkit-animation-play-state: running;
+              animation-play-state: running;
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+      -webkit-animation-iteration-count: 1;
+              animation-iteration-count: 1;
+      -webkit-animation-fill-mode: forwards;
+              animation-fill-mode: forwards; }
+
+@-webkit-keyframes LargeIn {
+  0% {
+    opacity: 0;
+    -webkit-transform: rotateZ(-12deg);
+            transform: rotateZ(-12deg); }
+  100% {
+    opacity: 1;
+    -webkit-transform: rotateZ(0deg);
+            transform: rotateZ(0deg); } }
+
+@keyframes LargeIn {
+  0% {
+    opacity: 0;
+    -webkit-transform: rotateZ(-12deg);
+            transform: rotateZ(-12deg); }
+  100% {
+    opacity: 1;
+    -webkit-transform: rotateZ(0deg);
+            transform: rotateZ(0deg); } }
+
+@-webkit-keyframes MediumIn {
+  0% {
+    opacity: 0;
+    -webkit-transform: rotateZ(12deg);
+            transform: rotateZ(12deg); }
+  100% {
+    opacity: 1;
+    -webkit-transform: rotateZ(0deg);
+            transform: rotateZ(0deg); } }
+
+@keyframes MediumIn {
+  0% {
+    opacity: 0;
+    -webkit-transform: rotateZ(12deg);
+            transform: rotateZ(12deg); }
+  100% {
+    opacity: 1;
+    -webkit-transform: rotateZ(0deg);
+            transform: rotateZ(0deg); } }
+
+@-webkit-keyframes SmallIn {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(50px);
+            transform: translateY(50px); }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px); } }
+
+@keyframes SmallIn {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(50px);
+            transform: translateY(50px); }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px); } }
 
 #hero-lights-out {
   position: absolute;
@@ -599,13 +752,24 @@ ul {
   background-color: #000000;
   opacity: .9;
   z-index: 10;
-  animation-name: LightsUp;
-  animation-play-state: running;
-  animation-delay: .5s;
-  animation-duration: 3s;
-  animation-iteration-count: 1;
-  animation-fill-mode: forwards;
-  animation-timing-function: ease-out; }
+  -webkit-animation-name: LightsUp;
+          animation-name: LightsUp;
+  -webkit-animation-play-state: running;
+          animation-play-state: running;
+  -webkit-animation-duration: 3s;
+          animation-duration: 3s;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  -webkit-animation-timing-function: ease-out;
+          animation-timing-function: ease-out; }
+
+@-webkit-keyframes LightsUp {
+  0% {
+    opacity: .9; }
+  100% {
+    opacity: .1; } }
 
 @keyframes LightsUp {
   0% {
@@ -622,7 +786,11 @@ ul {
   margin-left: -105px;
   background: url(../images/logo-w-shadow.png) no-repeat;
   background-size: 100%;
-  z-index: 15; }
+  z-index: 15;
+  -webkit-transition: opacity 1s ease-out;
+  transition: opacity 1s ease-out;
+  -webkit-transition-delay: .3s;
+          transition-delay: .3s; }
 
 #about-the-device {
   width: 100%;
