--- a/_uncompressed/scss/styles.scss
+++ b/_uncompressed/scss/styles.scss
@@ -113,10 +113,7 @@ ul {
     position: relative;
     width: 100%;
     height: 100vh;
-    background: url(../images/fpo-hero-bg.jpg) no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
+    background-color: $black;
     z-index: 50;
 
     h2 {
@@ -127,6 +124,7 @@ ul {
         text-shadow: 1px 1px 3px rgba(23, 23, 23, 0.89);
         transform: translateY(-50%);
         transition: opacity 1s ease-out;
+        z-index: 20;
 
         .large {
             opacity: 0;
@@ -215,29 +213,11 @@ ul {
     left: 0;
     width: 100%;
     height: 100vh;
-    background-color: $black;
-    opacity: .9;
-    //opacity: .1;
+    background: -moz-linear-gradient(top, rgba(0,0,0,.4) 0%, rgba(0,0,0,.6) 52%, rgba(0,0,0,0.8) 100%);
+    background: -webkit-linear-gradient(top, rgba(0,0,0,.4) 0%,rgba(0,0,0,0.6) 52%,rgba(0,0,0,0.8) 100%);
+    background: linear-gradient(to bottom, rgba(0,0,0,.4) 0%,rgba(0,0,0,0.6) 52%,rgba(0,0,0,0.8) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#bd000000',GradientType=0 );
     z-index: 10;
-    animation-name: LightsUp;
-    animation-play-state: running;
-    //animation-play-state: paused;
-    animation-duration: 3s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
-    animation-timing-function: ease-out;
-}
-
-@keyframes LightsUp {
-
-    0% {
-        opacity: .9;
-    }
-
-    100% {
-        opacity: .1;
-    }
-
 }
 
 .logo-w-shadow {
