--- a/css/styles.css
+++ b/css/styles.css
@@ -608,10 +608,7 @@ ul {
   position: relative;
   width: 100%;
   height: 100vh;
-  background: url(../images/fpo-hero-bg.jpg) no-repeat;
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
+  background-color: #000000;
   z-index: 50; }
   #hero h2 {
     position: relative;
@@ -620,7 +617,8 @@ ul {
     text-align: center;
     text-shadow: 1px 1px 3px rgba(23, 23, 23, 0.89);
     transform: translateY(-50%);
-    transition: opacity 1s ease-out; }
+    transition: opacity 1s ease-out;
+    z-index: 20; }
     #hero h2 .large {
       opacity: 0;
       transform: rotateZ(-12deg);
@@ -683,21 +681,9 @@ ul {
   left: 0;
   width: 100%;
   height: 100vh;
-  background-color: #000000;
-  opacity: .9;
-  z-index: 10;
-  animation-name: LightsUp;
-  animation-play-state: running;
-  animation-duration: 3s;
-  animation-iteration-count: 1;
-  animation-fill-mode: forwards;
-  animation-timing-function: ease-out; }
-
-@keyframes LightsUp {
-  0% {
-    opacity: .9; }
-  100% {
-    opacity: .1; } }
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.6) 52%, rgba(0, 0, 0, 0.8) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#bd000000',GradientType=0 );
+  z-index: 10; }
 
 .logo-w-shadow {
   position: absolute;
