--- a/_uncompressed/scss/styles.scss
+++ b/_uncompressed/scss/styles.scss
@@ -7,6 +7,8 @@
 @import "_boilerplate";
 @import "_mixins";
 @import "_typography";
+@import "_slick";
+@import "_slick-theme";
 
 /// Colors
 $white: #ffffff;
@@ -112,11 +114,14 @@ ul {
 }
 
 .wrap {
-    display: flex;
-    flex-flow: row;
-    flex-wrap: wrap;
     max-width: 900px;
     margin: 0 auto;
+
+    &.flex-elements {
+        display: flex;
+        flex-flow: row;
+        flex-wrap: wrap;
+    }
 }
 
 .content {
@@ -142,7 +147,7 @@ ul {
     }
 
     @media all and (max-width: 768px) {
-        padding: 30px 30px;
+        padding: 15px 30px;
 
         &.left {
             width: 100%;
@@ -361,6 +366,99 @@ ul {
 /// Gallery
 
 #gallery {
-    min-height: 400px;
+    position: relative;
+    left: -25%;
+    width: 150%;
+    padding: 90px 50px 100px;
     background-color: $dark-gray;
+    transform: rotateZ(-6deg);
+    transition: all .5s ease-out;
+
+    h3 {
+        margin: 0 0 20px;
+        text-align: center;
+    }
+
+    @media all and (max-width: 970px) {
+        left: 0;
+        width: 100%;
+        transform: rotateZ(0deg);
+    }
+}
+
+.media-slider {
+
+    div {
+
+        img {
+            width: 100%;
+        }
+
+    }
+
+}
+
+/// FAQs
+
+#faqs {
+    padding: 90px 20px 100px;
+    background-color: $tan;
+    color: $darkest-gray;
+
+    .wrap {
+        max-width: 700px;
+    }
+
+    h3 {
+        margin: 0 0 20px;
+        color: $darkest-gray;
+        text-align: center;
+    }
+
+    @media all and (max-width: 768px) {
+        padding: 30px 30px;
+    }
+
+}
+
+.accordion-toggle {
+    cursor: pointer;
+}
+
+.accordion-content {
+    display: none;
+}
+
+.accordion-content.default {
+    display: block;
+}
+
+/// Testimonials
+
+#testimonials {
+    padding: 90px 20px 100px;
+    background-color: $green;
+
+    h3 {
+        margin: 0 0 20px;
+        text-align: center;
+    }
+
+    .content {
+        width: 33.3333%;
+    }
+
+
+    @media all and (max-width: 768px) {
+        padding: 30px 30px;
+
+        h3 {
+            margin-bottom: 0;
+        }
+
+        .content {
+            width: 100%;
+        }
+
+    }
 }
