--- a/_uncompressed/scss/_typography.scss
+++ b/_uncompressed/scss/_typography.scss
@@ -4,3 +4,50 @@ $font-roboto: 'Roboto', sans-serif;
 $font-exo: 'Exo', sans-serif;
 
 // @font-face calls
+@font-face {
+  font-family: 'icomoon';
+  src:  url('../fonts/icomoon.eot?xgojpg');
+  src:  url('../fonts/icomoon.eot?xgojpg#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?xgojpg') format('truetype'),
+    url('../fonts/icomoon.woff?xgojpg') format('woff'),
+    url('../fonts/icomoon.svg?xgojpg#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-envelop:before {
+  content: "\65";
+}
+.icon-menu:before {
+  content: "\6d";
+}
+.icon-cross:before {
+  content: "\78";
+}
+.icon-facebook2:before {
+  content: "\66";
+}
+.icon-instagram:before {
+  content: "\69";
+}
+.icon-twitter:before {
+  content: "\74";
+}
+.icon-youtube:before {
+  content: "\79";
+}
