--- a/css/styles.css
+++ b/css/styles.css
@@ -1035,6 +1035,10 @@ p {
   line-height: 27px; }
   p.smaller {
     font-size: 12px; }
+  @media all and (max-width: 768px) {
+    p {
+      font-size: 16px;
+      line-height: 25px; } }
 
 a {
   color: #09c9f2;
@@ -1075,7 +1079,7 @@ ul {
     width: 45%; }
   @media all and (max-width: 768px) {
     .content {
-      padding: 15px 30px; }
+      padding: 15px 20px; }
       .content.left {
         width: 100%; }
       .content.right {
@@ -1335,7 +1339,161 @@ ul {
 #about-the-device {
   width: 100%;
   min-height: 400px;
+  padding: 60px 20px 80px;
   background-color: #09c9f2; }
+  #about-the-device h3 {
+    font-size: 40px; }
+  #about-the-device .content.left {
+    width: 45%; }
+  #about-the-device .content.right {
+    width: 55%; }
+  @media all and (max-width: 768px) {
+    #about-the-device {
+      padding: 10px 0 40px; }
+      #about-the-device h3 {
+        font-size: 30px; }
+      #about-the-device .content {
+        padding: 15px 20px; }
+        #about-the-device .content.left {
+          width: 100%; }
+        #about-the-device .content.right {
+          width: 100%;
+          padding: 0; } }
+
+#console-illustration {
+  position: relative;
+  width: 455px;
+  height: 296px;
+  background: url(../images/console-stopped.png) no-repeat;
+  background-size: 100%; }
+  #console-illustration .try-it {
+    position: absolute;
+    top: 170px;
+    right: 48px;
+    width: 80px;
+    height: 80px;
+    padding-top: 25px;
+    border-radius: 80px;
+    -webkit-box-shadow: 3px 8px 6px #151515;
+            box-shadow: 3px 8px 6px #151515;
+    background-color: #08e35a;
+    font-size: 20px;
+    font-family: "Exo", sans-serif;
+    color: #ffffff;
+    text-align: center;
+    z-index: 99;
+    -webkit-animation-name: tryfloat;
+            animation-name: tryfloat;
+    -webkit-animation-play-state: running;
+            animation-play-state: running;
+    -webkit-animation-duration: 1.5s;
+            animation-duration: 1.5s;
+    -webkit-animation-fill-mode: both;
+            animation-fill-mode: both;
+    -webkit-animation-direction: alternate;
+            animation-direction: alternate;
+    -webkit-animation-timing-function: ease-in-out;
+            animation-timing-function: ease-in-out;
+    -webkit-animation-iteration-count: infinite;
+            animation-iteration-count: infinite; }
+  #console-illustration #start-button {
+    position: absolute;
+    top: 57px;
+    right: 131px;
+    width: 60px;
+    height: 100px;
+    z-index: 100; }
+  #console-illustration #console-started {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 455px;
+    height: 296px;
+    background: url(../images/console-started.png) no-repeat;
+    background-size: 100%;
+    opacity: 0;
+    z-index: 10; }
+  #console-illustration.active #console-started {
+    opacity: 1; }
+  @media all and (max-width: 940px) {
+    #console-illustration {
+      width: 320px;
+      height: 208px;
+      margin: 140px auto 0; }
+      #console-illustration #start-button {
+        position: absolute;
+        top: 40px;
+        right: 91px;
+        width: 45px;
+        height: 69px; }
+      #console-illustration #console-started {
+        width: 320px;
+        height: 208px; } }
+  @media all and (max-width: 768px) {
+    #console-illustration {
+      margin: 0 auto; }
+      #console-illustration .try-it {
+        right: 28px;
+        width: 70px;
+        height: 70px;
+        padding-top: 22px;
+        border-radius: 70px;
+        -webkit-animation-name: tryfloatmobile;
+                animation-name: tryfloatmobile; } }
+
+@-webkit-keyframes tryfloat {
+  0% {
+    top: 170px; }
+  100% {
+    top: 190px; } }
+
+@keyframes tryfloat {
+  0% {
+    top: 170px; }
+  100% {
+    top: 190px; } }
+
+@-webkit-keyframes tryfloatmobile {
+  0% {
+    top: 100px; }
+  100% {
+    top: 115px; } }
+
+@keyframes tryfloatmobile {
+  0% {
+    top: 100px; }
+  100% {
+    top: 115px; } }
+
+.treadmill-animation {
+  position: relative;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  height: 260px;
+  background: #ffffff;
+  border: 20px solid #323232;
+  border-radius: 10px; }
+  .treadmill-animation .treadmill-not-tilting {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 220px; }
+  .treadmill-animation .treadmill-tilting {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 220px; }
+  @media all and (max-width: 940px) {
+    .treadmill-animation {
+      width: 320px;
+      height: 193px;
+      margin: 0 auto; }
+      .treadmill-animation .treadmill-not-tilting {
+        height: 154px; }
+      .treadmill-animation .treadmill-tilting {
+        height: 154px; } }
 
 #gallery {
   position: relative;
@@ -1393,7 +1551,7 @@ ul {
     width: 33.3333%; }
   @media all and (max-width: 768px) {
     #testimonials {
-      padding: 30px 30px; }
+      padding: 30px 0px; }
       #testimonials h3 {
         margin-bottom: 0; }
       #testimonials .content {
