--- a/css/styles.css
+++ b/css/styles.css
@@ -981,7 +981,7 @@ textarea {
 
 body {
   -webkit-font-smoothing: antialiased;
-  background: #ffffff;
+  background: #09c9f2;
   overflow-x: hidden;
   width: 100%;
   font-family: "Roboto", sans-serif;
@@ -996,6 +996,7 @@ h1, h2 {
   margin: 0;
   font-family: "Exo", sans-serif;
   font-weight: 900;
+  font-style: italic;
   color: #ffffff;
   text-transform: uppercase; }
 
@@ -1023,6 +1024,7 @@ h3 {
   font-family: "Exo", sans-serif;
   font-size: 48px;
   font-weight: 900;
+  font-style: italic;
   color: #ffffff;
   text-transform: uppercase; }
   @media all and (max-width: 768px) {
@@ -1099,6 +1101,7 @@ ul {
   transition: all .5s ease-out; }
   #main-navigation ul {
     margin: 25px auto;
+    padding: 0;
     text-align: center; }
   #main-navigation li {
     position: relative;
@@ -1109,6 +1112,7 @@ ul {
       font-family: "Exo", sans-serif;
       font-weight: 900;
       font-size: 18px;
+      font-style: italic;
       color: #ffffff;
       text-transform: uppercase;
       text-shadow: 1px 1px 3px rgba(23, 23, 23, 0.89); }
@@ -1249,6 +1253,13 @@ ul {
               animation-iteration-count: 1;
       -webkit-animation-fill-mode: forwards;
               animation-fill-mode: forwards; }
+  @media all and (max-width: 480px) {
+    #hero {
+      background: url(../images/photo-treadmill.jpg) no-repeat;
+      background-size: cover;
+      background-position: center; }
+      #hero .tn-video {
+        display: none; } }
 
 @-webkit-keyframes LargeIn {
   0% {
@@ -1550,20 +1561,23 @@ ul {
 .accordion-content.default {
   display: block; }
 
-#testimonials {
+#links {
   padding: 90px 20px 100px;
   background-color: #08e35a; }
-  #testimonials h3 {
+  #links h3 {
     margin: 0 0 20px;
     text-align: center; }
-  #testimonials .content {
-    width: 33.3333%; }
+  #links .content {
+    width: 100%; }
+  #links a {
+    color: #151515;
+    text-decoration: underline; }
   @media all and (max-width: 768px) {
-    #testimonials {
+    #links {
       padding: 30px 0px; }
-      #testimonials h3 {
+      #links h3 {
         margin-bottom: 0; }
-      #testimonials .content {
+      #links .content {
         width: 100%; } }
 
 #footer {
@@ -1578,13 +1592,13 @@ ul {
     display: block;
     width: 100%;
     margin: 15px 0;
-    padding: 0 20px;
+    padding: 15px 20px;
     background-color: #151515;
     border: 0 solid;
     border-top: 3px solid #ffffff;
     font-family: "Roboto", sans-serif;
     font-size: 18px;
-    line-height: 53px;
+    line-height: 23px;
     color: #ffffff;
     -webkit-transition: all .7s ease-out;
     transition: all .7s ease-out; }
